CI: yamllint-clean workflows

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,26 @@
-# .pre-commit-config.yaml
+default_language_version:
+  python: python3
 
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.9.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.9
     hooks:
-      - id: black
-        language_version: python3
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.1.0
+      - id: ruff
+        args: ["--fix", "--config=ruff.toml"]
+      - id: ruff-format
+        args: ["--config=ruff.toml"]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.11.2
     hooks:
-      - id: flake8
-        language_version: python3
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+      - id: mypy
+        additional_dependencies: [types-requests, types-setuptools]
+        args: ["--cache-dir=.mypy_cache", "--config-file=mypy.ini"]
+
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.35.1
     hooks:
-      - id: check-added-large-files
-      - id: check-merge-conflict
-      - id: check-yaml
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
+      - id: yamllint
+        name: yamllint (workflows)
+        files: ^\.github/workflows/.*\.(yml|yaml)$
+        args: ["-c", ".yamllint"]
