--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-pythonpath = .
+addopts = -m "not integration"
+markers =
+	integration: tests die netwerk/externen vereisen (server, API keys)
