--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,33 +2,36 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main ]
+    branches: [main, develop]
+
+permissions: read-all
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - name: Install dependencies
+          python-version: "3.12"
+          cache: pip
+
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
-          pip install fastapi pydantic openai numpy ruff
-      - name: Lint with ruff
-        run: |
-          ruff .
-      - name: Run all tests
-        run: |
-          python run_tests.py
-      - name: Report failures to self_improving_agent (optional)
-        if: failure()
-        run: |
-          echo "Tests failed. Reporting to self_improving_agent..."
-          # Add your reporting logic here (e.g. curl, python script)
+          pip install -r requirements.txt
+
+      - name: Lint (ruff)
+        run: ruff check .
+
+      - name: Typecheck (mypy)
+        run: mypy . --config-file mypy.ini
+
+      - name: Tests (pytest)
+        run: pytest -q
